fix button alignment in button groups

--- a/src/styles/utilities/button-group.css
+++ b/src/styles/utilities/button-group.css
@@ -1,5 +1,6 @@
 .wa-button-group {
   display: inline-flex;
+  align-items: center;
   position: relative;
   isolation: isolate;
 
